[iOS] DOMNode preview snapshot rects are wrong for user-select: none links https://bugs.webkit.org/show_bug.cgi?id=147513 <rdar://problem/22083354>

Reviewed by Simon Fraser.

* bindings/objc/DOM.mm:
(-[DOMNode getPreviewSnapshotImage:andRects:]):
Use the same code as WebKit2 to compute the fallback rect (if TextIndicator fails),
asking the RenderObject (or RenderImage) for its bounding box instead of using the
(often wrong) Range bounding rect.

Make sure to use the fallback rect *any* time TextIndicator fails (before
we would return no rects at all if TextIndicator::createWithRange returned null,
and the fallback rect if it returned with an empty image).

Inverse-page-scale the margin, to match the appearance in WebKit2.


Canonical link: https://commits.webkit.org/165582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187686 268f45cc-cd09-0410-ab3c-d52691b4dbfc