Source/WebCore/bindings/objc/DOM.mm
@@ -595,28 +595,39 @@ id <DOMEventTarget> kit(WebCore::EventTarget* eventTarget)
 
     Ref<Range> range = rangeOfContents(*coreNode);
 
-    const float margin = 4;
+    const float margin = 4 / coreNode->document().page()->pageScaleFactor();
     RefPtr<TextIndicator> textIndicator = TextIndicator::createWithRange(range, TextIndicatorPresentationTransition::None, margin);
 
-    if (!textIndicator)
-        return;
-
-    if (Image* image = textIndicator->contentImage())
-        *cgImage = (CGImageRef)CFAutorelease(CGImageRetain(image->getCGImageRef()));
+    if (textIndicator) {
+        if (Image* image = textIndicator->contentImage())
+            *cgImage = (CGImageRef)CFAutorelease(CGImageRetain(image->getCGImageRef()));
+    }
 
     RetainPtr<NSMutableArray> rectArray = adoptNS([[NSMutableArray alloc] init]);
 
-    if (*cgImage) {
-        FloatPoint origin = textIndicator->textBoundingRectInRootViewCoordinates().location();
-        for (const FloatRect& rect : textIndicator->textRectsInBoundingRectCoordinates()) {
-            CGRect cgRect = rect;
-            cgRect.origin.x += origin.x();
-            cgRect.origin.y += origin.y();
-            cgRect = coreNode->document().frame()->view()->contentsToWindow(enclosingIntRect(cgRect));
+    if (!*cgImage) {
+        if (RenderObject* renderer = coreNode->renderer()) {
+            FloatRect boundingBox;
+            if (renderer->isRenderImage())
+                boundingBox = downcast<RenderImage>(*renderer).absoluteContentQuad().enclosingBoundingBox();
+            else
+                boundingBox = renderer->absoluteBoundingBoxRect();
+
+            boundingBox.inflate(margin);
+
+            CGRect cgRect = coreNode->document().frame()->view()->contentsToWindow(enclosingIntRect(boundingBox));
             [rectArray addObject:[NSValue value:&cgRect withObjCType:@encode(CGRect)]];
+
+            *rects = rectArray.autorelease();
         }
-    } else {
-        CGRect cgRect = CGRectInset(range->boundingRect(), -margin, -margin);
+        return;
+    }
+
+    FloatPoint origin = textIndicator->textBoundingRectInRootViewCoordinates().location();
+    for (const FloatRect& rect : textIndicator->textRectsInBoundingRectCoordinates()) {
+        CGRect cgRect = rect;
+        cgRect.origin.x += origin.x();
+        cgRect.origin.y += origin.y();
         cgRect = coreNode->document().frame()->view()->contentsToWindow(enclosingIntRect(cgRect));
         [rectArray addObject:[NSValue value:&cgRect withObjCType:@encode(CGRect)]];
     }
